# marimo_lexica

./: .gitignore  README.md  pyproject.toml
docs/: index.html
notebooks/: lewis_short.py
