[project]
name = "marimo_lexica"
version = "0.1.0"
description = "Lexica in marimo notebooks"
authors = [{name = "Neel Smith", email = "nsmith@holycross.edu"}]
dependencies = [
    "marimo",
    "polars",
    "cite_exchange"

]
requires-python = ">=3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.marimo]
# Optional: Configure marimo specific settings
# layout_file = "layouts.json"